Add link to index.html to connect to cheesepizza page

--- a/index.html
+++ b/index.html
@@ -5,4 +5,8 @@
         <meta charset="UTF-8">
         <title>Cheese Pizza Recipe</title>
     </head>
+<body>
+    <a href="cheesepizza.html">How to Make Cheese Pizza</a>
+</body>
+
 </html>
