Description and some ingredients added

--- a/recipes/cheesepizza.html
+++ b/recipes/cheesepizza.html
@@ -1,2 +1,21 @@
 <h1>How to Make an Awesome Cheese Pizza!</h1>
+
 <img src="cheesepizza.webp" alt="A delicious cheese pizza">
+
+<p><h2>Description</h2></p>
+<p>A cheese pizza is a classic recipe that can be done at home 
+    with little effort. It can be a fun project to do with family or 
+    a creative little date! 
+</p>
+
+<p>Do not feel the need to follow this recipe to its exact specification.
+    Add whatever is your favorite cheese, toppings, or any additional seasoning.
+    Make the pizza your own!
+</p>
+
+<p><h2>Ingredients</h2></p>
+<ul>
+    <li>Cheese of choice</li>
+    <li>Tomato Sauce of choice</li>
+    <li>Dough of choice</li>
+</ul>
