List of ingredients and context of ingredients added

--- a/recipes/cheesepizza.html
+++ b/recipes/cheesepizza.html
@@ -19,3 +19,7 @@
     <li>Tomato Sauce of choice</li>
     <li>Dough of choice</li>
 </ul>
+<p>If you want to mimic our recipe, we used prepackaged, store-bought dough;
+    a jar of Prego Traditional; and a mix of mozzarella, parmesan, and gouda
+    cheese.
+</p>
