Create steps to follow

--- a/recipes/cheesepizza.html
+++ b/recipes/cheesepizza.html
@@ -23,3 +23,25 @@
     a jar of Prego Traditional; and a mix of mozzarella, parmesan, and gouda
     cheese.
 </p>
+
+<H2>Steps</H2>
+<p>Now, the real fun: how the hell do you make it?? Luckily, the <strong>actual</strong>
+process is fairly easy. Just follow along!</p>
+
+<ol>
+    <li><strong>Preheat the oven</strong> to 475 degrees F. (or 245 in C)
+    </li>
+    <li><strong>Get your dough </strong>and start <em>rolling</em>. You'll want to do your best
+    to make yourself a little circle. Sometimes, people will throw it up in the air
+like some wizard. We suck at that and instead manually roll it out and then
+curl the edges to make the crust.</li>
+    <li><strong>Sauce that boy!<strong> You'll want to try and make an even
+        spread of the sauce for the most optimal coverage.
+    </li>
+    <li><strong>Cheese it up!</strong> As they say, <em>"this is where the fun begins."
+    </em> Start dropping on that cheese till you feel satisfied. It is probably better
+    to do more cheese than less.</li>
+    <li><strong>Start cooking.</strong> It should take only 10-15 minutes to cook,
+    so you're in luck if you're hungry.</li>
+    <li><strong>Let rest and then enjoy!</strong></li>
+</ol>
