--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Cheese Pizza Recipe</title>
+        <title>Recipes</title>
     </head>
 <body>
     <a href="cheesepizza.html">How to Make Cheese Pizza</a>
