Upated link on index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Recipes</title>
     </head>
 <body>
-    <a href="cheesepizza.html">How to Make Cheese Pizza</a>
+    <a href="recipes/cheesepizza.html">How to Make Cheese Pizza</a>
 </body>
 
 </html>
