Updates to yeastrolls.html including adding necessary ingredients and steps.

--- a/recipes/cheesepizza.html
+++ b/recipes/cheesepizza.html
@@ -1,6 +1,6 @@
 <h1>How to Make an Awesome Cheese Pizza!</h1>
 
-<img src="cheesepizza.webp" alt="A delicious cheese pizza">
+<img src="img/cheesepizza.jpg" alt="A delicious cheese pizza">
 
 <p><h2>Description</h2></p>
 <p>A cheese pizza is a classic recipe that can be done at home 
@@ -35,7 +35,7 @@ process is fairly easy. Just follow along!</p>
     to make yourself a little circle. Sometimes, people will throw it up in the air
 like some wizard. We suck at that and instead manually roll it out and then
 curl the edges to make the crust.</li>
-    <li><strong>Sauce that boy!<strong> You'll want to try and make an even
+    <li><strong>Sauce that boy!</li></strong> You'll want to try and make an even
         spread of the sauce for the most optimal coverage.
     </li>
     <li><strong>Cheese it up!</strong> As they say, <em>"this is where the fun begins."
