Completed steps description for yeastrolls.html

--- a/recipes/yeastrolls.html
+++ b/recipes/yeastrolls.html
@@ -33,5 +33,33 @@
 <ol>
     Dissolve yeast in warm water in the bowl of a stand mixer fitted with the dough hook.
     Stir in sugar and salt until you see foam rising. Add 3 cups flour and 3/4 cup shortening;
-    mix with the dough hook until the mixture is the consistency of a thick pancake.
+    mix with the dough hook until the mixture is the consistency of a thick pancake batter.
 </ol>
+<ol>
+    Fill a pot with hot (NOT BOILING) water.
+</ol>
+<ol>
+    Remove the mixer bowl and cover it with plastic wrap and a towel. Place the bowl
+    over the pot of hot water, making sure the bottom does not touch the water. Let rise until doubled
+    in size, 45 minutes to 1 hour.
+</ol>
+<ol>
+    Place the bowl back on your stand mixer and gradually mix in remaining 4 cups flour until
+    dough is smooth and elastic; you may need to add up to 1 additional cup.
+</ol>
+<ol>
+    Heavily grease two 9x13-inch pans with shortening.
+</ol>
+<ol>
+    Divide dough into 24 balls. Place 12 balls into each of the prepared pans; cover with plastic wrap and a towl.
+    Let rise in a warm area until doubled in size, about 1 hour;
+    balls will start out at about 1 1/2 inches in diameter but will rise and touch the sides of the pans.
+</ol>
+<ol>
+    Preheat the oven to 375 degrees F (190 degrees C).
+</ol>
+<ol>
+    Bake rolls in the preheated oven until golden brown on top, 25 to 30 minutes.
+    Remove from the oven and brush melted butter over top.
+</ol>
+<ol><strong>Enjoy!</strong></ol>
