--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 <body>
     <a href="recipes/cheesepizza.html">How to Make Cheese Pizza</a>
-    <a href="recipes/yeastrolls.html">How to Make Grandma's Old Fashion Yeast Rolls</a>
+    <p><a href="recipes/yeastrolls.html">How to Make Grandma's Old Fashion Yeast Rolls</a></p>
 </body>
 
 </html>
