Add link on index.html to cookies recipe

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <title>Recipes</title>
     </head>
 <body>
-    <a href="recipes/cheesepizza.html">How to Make Cheese Pizza</a>
+    <p><h1>Recipes</h1></p>
+    <p><a href="recipes/cheesepizza.html">How to Make Cheese Pizza</a></p>
     <p><a href="recipes/yeastrolls.html">How to Make Grandma's Old Fashion Yeast Rolls</a></p>
+    <p><a href="recipes/choccookies.html">How to Make the Best Chocolate Chip Cookies</a></p>
 </body>
 
 </html>
