Fix broken image link in choccookies.html

--- a/recipes/choccookies.html
+++ b/recipes/choccookies.html
@@ -1,5 +1,6 @@
 <h1>Best Chocolate Chip Cookies, Full Stop</h1>
-<a href="img/cookies.jpg" alt="Doughy chocolate chip cookies still baking in the oven"></a>
+<img src="img/cookies.jpg" alt="Doughy chocolate chip cookies still baking in the oven.">
+ 
 
 <h2>Description</h2>
 
