Add unordered list to index.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     </head>
 <body>
     <p><h1>Recipes</h1></p>
-    <p><a href="recipes/cheesepizza.html">How to Make Cheese Pizza</a></p>
-    <p><a href="recipes/yeastrolls.html">How to Make Grandma's Old Fashion Yeast Rolls</a></p>
-    <p><a href="recipes/choccookies.html">How to Make the Best Chocolate Chip Cookies</a></p>
+    <ul>
+        <li><a href="recipes/cheesepizza.html">How to Make Cheese Pizza</a></li>
+        <li><a href="recipes/yeastrolls.html">How to Make Grandma's Old Fashion Yeast Rolls</a></li>
+        <li><a href="recipes/choccookies.html">How to Make the Best Chocolate Chip Cookies</a></li>
+    </ul>
 </body>
 
 </html>
